--- a/css/picture.css
+++ b/css/picture.css
@@ -35,3 +35,25 @@ header h1{
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
 }
+
+.photo{
+    position: relative;
+}
+
+.photo .inner{
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 10px;
+    color: white;
+    margin: 0;
+    width: 100%;
+}
+
+.inner p{
+    padding: 20px;
+}
+
+.inner span{
+    margin-left: 25px;
+}
